fixed spacing

--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -6,12 +6,20 @@
     flex-direction: column;
     align-items: center;
     margin-left: 0px;
-    margin-right: 40px;
+    /* margin-right: 40px; */
 }
 
 body {
     margin-top: 10px;
+    width: 100%;
+}
 
+.culprit {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px
 }
 
 .EachEvent {
@@ -19,6 +27,8 @@ body {
     padding: 4px;
     background-color: ghostwhite;
     border-radius: 12px;
+    min-width: 500px;
+    width: 100%;
 }
 
 .EachEvent:hover {
@@ -31,23 +41,21 @@ body {
     left: 20px;
     top: 10px;
     border-radius: 2px;
+    height: 30px;
 
 }
 
-ul {
-    width: 100%;
+/* ul { */
+/* width: 100%;
     margin: 0px;
     margin-top: 35px;
     padding: 20px;
-}
+} */
 
-#root {
-    margin: 0px;
-
-}
 
 .createform {
-    border: solid black 1px;
+    display: flex;
+    justify-content: center;
     color: black;
     margin: 5px;
     background-color: gainsboro;
@@ -56,22 +64,28 @@ ul {
     left: 20px;
     border: 1px solid black;
     border-radius: 3px;
-    padding: 3px;
+    padding: 5px;
     text-decoration: none;
+    width: 100px;
+    position: absolute;
+    top: 90px;
+    left: 25px;
 }
 
 .createform:hover {
-    box-shadow: 0px 0px 3px black;
+    box-shadow: 0px 0px 5px black;
 }
 
 .h1heheh {
-    position: relative;
-    left: 35%;
+    /* position: relative; */
+    align-self: center;
+    justify-self: center;
+    width: 300px;
     background-color: whitesmoke;
-    width: 30%;
     border: solid 1px black;
     border-radius: 4px;
     text-align: center;
+    box-shadow: 0 0 5px;
 }
 
 .navLink {
